<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background3"
    android:padding="20dp"
    tools:context=".view.MainActivity">

    <TextView
        android:id="@+id/gretting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:padding="3dp"
        android:text="@string/greeting"
        android:textColor="@android:color/black"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/choose_range_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/gretting"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:layout_weight="2"
        android:text="@string/choose_range"
        android:textColor="@android:color/black"
        android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/range_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/choose_range_text"
        android:orientation="horizontal"
        android:textColor="@android:color/black">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/start_label"
            android:textColor="@android:color/black"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/range_start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="number"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/end_label"
            android:textColor="@android:color/black"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/range_end"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="number"
            android:textColor="@android:color/black" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/range_container"
        android:layout_marginTop="15dp"
        android:text="@string/choose_repetition"
        android:textColor="@android:color/black"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/choose_repetition_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/range_container"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:text="@string/choose_repetition"
        android:textColor="@android:color/black"
        android:textSize="25sp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/choose_repetition_label"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radio_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/choose_yes"
            android:textSize="25sp" />

        <RadioButton
            android:id="@+id/radio_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/choose_no"
            android:textSize="25sp" />
    </RadioGroup>

    <Button
        android:id="@+id/button_draw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/button_background"
        android:padding="24dp"
        android:text="@string/button_draw"
        android:textColor="@color/textWhite"
        android:textStyle="bold"
        android:textSize="20sp" />

</RelativeLayout>